ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medpharma-erp
  labels:
    app.kubernetes.io/name: medpharma-erp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: a9d2bf7aa8662457583842a305a1a089-1581701768.us-east-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/auth"
        backend:
          service:
            name: user-service
            port: 
              number: 8081
      - pathType: Prefix
        path: "/api/v1/users"
        backend:
          service:
            name: user-service
            port: 
              number: 8081
      - pathType: Prefix
        path: "/api/v1/organizations"
        backend:
          service:
            name: user-service
            port: 
              number: 8081
      - pathType: Prefix
        path: "/api/v1/products"
        backend:
          service:
            name: product-service
            port: 
              number: 8082
      - pathType: Prefix
        path: "/api/v1/orders"
        backend:
          service:
            name: order-service
            port: 
              number: 8083
